=====================
===  Release 1.2  ===
=====================

2013-01-12  Julien Bect  <julien.bect@supelec.fr>

	Fixed documentation.

	* misc/dist/stk_dist.m: modified
	* misc/dist/stk_mindist.m: modified
	* misc/dist/stk_filldist.m: modified

2013-01-03  Julien Bect  <julien.bect@supelec.fr>

	Modified stk_makedoc to exclude misc/matlab from the generated
	HTML documentation.

	* stk_makedoc.m: modified

	Made stk_narginchk() slightly more efficient.

	* misc/error/stk_narginchk.m: modified

	Added the text of the GPLv3 license.

	* LICENSE: new

	Removed the NEWS file (to be written after creating the
	maintenance branch for a new release).

	* NEWS: removed

	Restored '.a' outputs for all stk_sampling_* functions and
	streamlined unit tests for that.

	* sampling/stk_sampling_olhs.m: modified
	* sampling/stk_sampling_randunif.m: modified
	* sampling/stk_sampling_regulargrid.m: modified
	* sampling/stk_sampling_randomlhs.m: modified
	* sampling/stk_sampling_maximinlhs.m: modified

2013-01-02  Julien Bect  <julien.bect@supelec.fr>

	Added a script to generate the HTML documentation.

	* stk_makedoc.m: new script

	Fixed a bug in M2HTML (affecting option 'ignoredDir').

	* misc/m2html/m2html.m: modified

	Added M2HTML version 1.5 (by Guillaume Flandin).

	* misc/m2html: new

	Removing folder ./htmldoc (to be generated after creating the
	maintenance branch for a new release).

	* htmldoc: removed

2012-12-31  Julien Bect  <julien.bect@supelec.fr>

	Fixing bugs in stk_test() and stk_runtests().

	* misc/test/stk_runtests.m: modified
	* misc/test/stk_test.m: modified

2012-12-16  Julien Bect  <julien.bect@supelec.fr>

	Modified stk_runtests() to browse through private folders and
	class(@) folders.

	* misc/test/stk_runtests.m: modified

	Fixed a typo.

	* misc/test/stk_runtests.m: modified

2012-12-14  Benoit Jan  <benoit.jan@supelec.fr>

	Fixed a bug in stk_make_matcov's "parfor" private functions.

	* core/private/stk_make_matcov_inter_parfor.m: modified